umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_K3T_angle.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C12H8ClFN2OS2
      atom_count: 27
      bond_count: 29
      property_count: 26
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C12H8ClFN2OS2
      atom_count: 27
      bond_count: 29
      property_count: 26
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C12H8ClFN2OS2
      atom_count: 27
      bond_count: 29
      extended_atoms: 0
      extended_bonds: 0
      property_count: 26
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C12H8ClFN2OS2
      atom_count: 27
      bond_count: 29
      extended_atoms: 0
      extended_bonds: 0
      property_count: 26
      rgroup_count: 0
      sgroup_count: 0
