umol-graph/tests/sdf_parsing/snapshots/sdf_parsing__sdf_parsing_suite__run_conformance_test@schrodinger_O14757_lig.sdf.snap
---
source: umol-models-graph/tests/sdf_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C17H19F2N4O2S+
      atom_count: 45
      bond_count: 47
      property_count: 41
molecule_lenient:
  success: true
  compound_count: 1
  summaries:
    - sum_formula: C17H19F2N4O2S+
      atom_count: 45
      bond_count: 47
      property_count: 41
extended_molecule:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C17H19F2N4O2S+
      atom_count: 45
      bond_count: 47
      extended_atoms: 0
      extended_bonds: 0
      property_count: 41
      rgroup_count: 0
      sgroup_count: 0
extended_molecule_lenient:
  success: true
  compound_count: 1
  extended_summaries:
    - sum_formula: C17H19F2N4O2S+
      atom_count: 45
      bond_count: 47
      extended_atoms: 0
      extended_bonds: 0
      property_count: 41
      rgroup_count: 0
      sgroup_count: 0
